--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,3 +11,23 @@ body {
 body > div:last-child > span + img {
   display: inline !important;
 }
+
+.youtube-video-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+
+.youtube-video-container::after {
+  display: block;
+  content: "";
+  padding-top: 56.25%;
+}
+
+.youtube-video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
