Squashed commit of the following:
commit a4ebe3fe3209d296e5dfdaf55a314787b226df49
Author: Josh Payette <139721968+joshpayette@users.noreply.github.com>
Date:   Thu Mar 21 20:36:57 2024 -0400

    /creator-builds now /featured-builds

--- a/src/app/sitemap.htm
+++ b/src/app/sitemap.htm
@@ -1,24 +1,54 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-			   <?xml-stylesheet type="text/xsl" href="stylesheet.xslt"?>
+<?xml-stylesheet type="text/xsl" href="stylesheet.xslt"?>
 
-                     <!-- Created using XmlSitemapGenerator.org - Free HTML, RSS and XML sitemap generator -->
+<!-- Created using XmlSitemapGenerator.org - Free HTML, RSS and XML sitemap generator -->
 
-			    <urlset   
-			    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"   
-			    xmlns="http://www.sitemaps.org/schemas/sitemap/0.9" 
-                      xmlns:image="http://www.google.com/schemas/sitemap-image/1.1"   
-			    xsi:schemaLocation="http://www.sitemaps.org/schemas/sitemap/0.9 http://www.sitemaps.org/schemas/sitemap/0.9/sitemap.xsd http://www.google.com/schemas/sitemap-image/1.1 http://www.google.com/schemas/sitemap-image/1.1/sitemap-image.xsd"   
-			    >
-<url><loc>https://www.remnant2toolkit.com/</loc><changefreq>daily</changefreq><priority>none</priority></url>
-<url><loc>https://www.remnant2toolkit.com/profile/created-builds</loc><changefreq>daily</changefreq><priority>none</priority></url>
-<url><loc>https://www.remnant2toolkit.com/profile/favorited-builds</loc><changefreq>daily</changefreq><priority>none</priority></url>
-<url><loc>https://www.remnant2toolkit.com/tracker</loc><changefreq>daily</changefreq><priority>none</priority></url>
-<url><loc>https://www.remnant2toolkit.com/creator-builds</loc><changefreq>daily</changefreq><priority>none</priority></url>
-<url><loc>https://www.remnant2toolkit.com/community-builds</loc><changefreq>daily</changefreq><priority>none</priority></url>
-<url><loc>https://www.remnant2toolkit.com/boss-tracker</loc><changefreq>daily</changefreq><priority>none</priority></url>
-<url><loc>https://www.remnant2toolkit.com/item-lookup</loc><changefreq>daily</changefreq><priority>none</priority></url>
-<url><loc>https://www.remnant2toolkit.com/builder/create</loc><changefreq>daily</changefreq><priority>none</priority></url>
-<url><loc>https://www.remnant2toolkit.com/builder</loc><changefreq>daily</changefreq><priority>none</priority></url>
+<urlset
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns="http://www.sitemaps.org/schemas/sitemap/0.9"
+  xmlns:image="http://www.google.com/schemas/sitemap-image/1.1"
+  xsi:schemaLocation="http://www.sitemaps.org/schemas/sitemap/0.9 http://www.sitemaps.org/schemas/sitemap/0.9/sitemap.xsd http://www.google.com/schemas/sitemap-image/1.1 http://www.google.com/schemas/sitemap-image/1.1/sitemap-image.xsd"
+>
+  <url
+    ><loc>https://www.remnant2toolkit.com/</loc><changefreq>daily</changefreq
+    ><priority>none</priority></url
+  >
+  <url
+    ><loc>https://www.remnant2toolkit.com/profile/created-builds</loc
+    ><changefreq>daily</changefreq><priority>none</priority></url
+  >
+  <url
+    ><loc>https://www.remnant2toolkit.com/profile/favorited-builds</loc
+    ><changefreq>daily</changefreq><priority>none</priority></url
+  >
+  <url
+    ><loc>https://www.remnant2toolkit.com/tracker</loc
+    ><changefreq>daily</changefreq><priority>none</priority></url
+  >
+  <url
+    ><loc>https://www.remnant2toolkit.com/featured-builds</loc
+    ><changefreq>daily</changefreq><priority>none</priority></url
+  >
+  <url
+    ><loc>https://www.remnant2toolkit.com/community-builds</loc
+    ><changefreq>daily</changefreq><priority>none</priority></url
+  >
+  <url
+    ><loc>https://www.remnant2toolkit.com/boss-tracker</loc
+    ><changefreq>daily</changefreq><priority>none</priority></url
+  >
+  <url
+    ><loc>https://www.remnant2toolkit.com/item-lookup</loc
+    ><changefreq>daily</changefreq><priority>none</priority></url
+  >
+  <url
+    ><loc>https://www.remnant2toolkit.com/builder/create</loc
+    ><changefreq>daily</changefreq><priority>none</priority></url
+  >
+  <url
+    ><loc>https://www.remnant2toolkit.com/builder</loc
+    ><changefreq>daily</changefreq><priority>none</priority></url
+  >
 </urlset>
 <!-- Created using XmlSitemapGenerator.org - Free HTML, RSS and XML sitemap generator -->
