--- a/src/app/sitemap.htm
+++ b/src/app/sitemap.htm
@@ -15,14 +15,6 @@
     ><priority>none</priority></url
   >
   <url
-    ><loc>https://www.remnant2toolkit.com/profile/created-builds</loc
-    ><changefreq>daily</changefreq><priority>none</priority></url
-  >
-  <url
-    ><loc>https://www.remnant2toolkit.com/profile/favorited-builds</loc
-    ><changefreq>daily</changefreq><priority>none</priority></url
-  >
-  <url
     ><loc>https://www.remnant2toolkit.com/tracker</loc
     ><changefreq>daily</changefreq><priority>none</priority></url
   >
@@ -48,6 +40,18 @@
   >
   <url
     ><loc>https://www.remnant2toolkit.com/builder</loc
+    ><changefreq>daily</changefreq><priority>none</priority></url
+  >
+  <url
+    ><loc>https://www.remnant2toolkit.com/world-save-archive</loc
+    ><changefreq>daily</changefreq><priority>none</priority></url
+  >
+  <url
+    ><loc>https://www.remnant2toolkit.com/resources</loc
+    ><changefreq>daily</changefreq><priority>none</priority></url
+  >
+  <url
+    ><loc>https://www.remnant2toolkit.com/support-r2tk</loc
     ><changefreq>daily</changefreq><priority>none</priority></url
   >
 </urlset>
