--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,9 +2,145 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  :root, .light {
+    --color-background: 245 250 252;
+    --color-background-solid: 255 255 255;
+    --color-surface: 23 29 30;
+    --color-surface-solid: 0 0 0;
+
+    --color-gray-50: 3 7 18;
+    --color-gray-100: 17 24 39;
+    --color-gray-200: 31 41 55;
+    --color-gray-300: 55 65 81;
+    --color-gray-400: 75 85 99;
+    --color-gray-500: 107 114 128;
+    --color-gray-600: 156 163 175;
+    --color-gray-700: 209 213 219;
+    --color-gray-800: 229 231 235;
+    --color-gray-900: 243 244 246;
+    --color-gray-950: 249 250 251;
+    
+    --color-zinc-50: 9 9 11;
+    --color-zinc-100: 24 24 27;
+    --color-zinc-200: 39 39 42;
+    --color-zinc-300: 63 63 70;
+    --color-zinc-400: 82 82 91;
+    --color-zinc-500: 113 113 122;
+    --color-zinc-600: 161 161 170;
+    --color-zinc-700: 212 212 216;
+    --color-zinc-800: 228 228 231;
+    --color-zinc-900: 244 244 245;
+    --color-zinc-950: 250 250 250;
+
+    --color-cyan-50: 8 51 68;
+    --color-cyan-100: 22 78 99;
+    --color-cyan-200: 21 94 117;
+    --color-cyan-300: 14 116 144;
+    --color-cyan-400: 8 145 178;
+    --color-cyan-500: 6 182 212;
+    --color-cyan-600: 34 211 238;
+    --color-cyan-700: 103 232 249;
+    --color-cyan-800: 165 243 252;
+    --color-cyan-900: 207 250 254;
+    --color-cyan-950: 236 254 255;
+    
+    --color-violet-50: 46 16 101;
+    --color-violet-100: 76 29 149;
+    --color-violet-200: 91 33 182;
+    --color-violet-300: 109 40 217;
+    --color-violet-400: 124 58 237;
+    --color-violet-500: 139 92 246;
+    --color-violet-600: 167 139 250;
+    --color-violet-700: 196 181 253;
+    --color-violet-800: 221 214 254;
+    --color-violet-900: 237 233 254;
+    --color-violet-950: 245 243 255;
+    
+    --color-yellow-50: 66 32 6;
+    --color-yellow-100: 113 63 18;
+    --color-yellow-200: 133 77 14;
+    --color-yellow-300: 161 98 7;
+    --color-yellow-400: 202 138 4;
+    --color-yellow-500: 234 179 8;
+    --color-yellow-600: 250 204 21;
+    --color-yellow-700: 253 224 71;
+    --color-yellow-800: 254 240 138;
+    --color-yellow-900: 254 249 195;
+    --color-yellow-950: 254 252 232;
+  }
+
+  .dark {
+    --color-background: 17 0 28;
+    --color-background-solid: 0 0 0;
+    --color-surface: 245 250 252;
+    --color-surface-solid: 255 255 255;
+
+    --color-gray-50: 249 250 251;
+    --color-gray-100: 243 244 246;
+    --color-gray-200: 229 231 235;
+    --color-gray-300: 209 213 219;
+    --color-gray-400: 156 163 175;
+    --color-gray-500: 107 114 128;
+    --color-gray-600: 75 85 99;
+    --color-gray-700: 55 65 81;
+    --color-gray-800: 31 41 55;
+    --color-gray-900: 17 24 39;
+    --color-gray-950: 3 7 18;
+
+    --color-zinc-50: 250 250 250;
+    --color-zinc-100: 244 244 245;
+    --color-zinc-200: 228 228 231;
+    --color-zinc-300: 212 212 216;
+    --color-zinc-400: 161 161 170;
+    --color-zinc-500: 113 113 122;
+    --color-zinc-600: 82 82 91;
+    --color-zinc-700: 63 63 70;
+    --color-zinc-800: 39 39 42;
+    --color-zinc-900: 24 24 27;
+    --color-zinc-950: 9 9 11;
+
+    --color-cyan-50: 236 254 255;
+    --color-cyan-100: 207 250 254;
+    --color-cyan-200: 165 243 252;
+    --color-cyan-300: 103 232 249;
+    --color-cyan-400: 34 211 238;
+    --color-cyan-500: 6 182 212;
+    --color-cyan-600: 8 145 178;
+    --color-cyan-700: 14 116 144;
+    --color-cyan-800: 21 94 117;
+    --color-cyan-900: 22 78 99;
+    --color-cyan-950: 8 51 68;
+    
+    --color-violet-50: 245 243 255;
+    --color-violet-100: 237 233 254;
+    --color-violet-200: 221 214 254;
+    --color-violet-300: 196 181 253;
+    --color-violet-400: 167 139 250;
+    --color-violet-500: 139 92 246;
+    --color-violet-600: 124 58 237;
+    --color-violet-700: 109 40 217;
+    --color-violet-800: 91 33 182;
+    --color-violet-900: 76 29 149;
+    --color-violet-950: 46 16 101;
+    
+    --color-yellow-50: 254 252 232;
+    --color-yellow-100: 254 249 195;
+    --color-yellow-200: 254 240 138;
+    --color-yellow-300: 253 224 71;
+    --color-yellow-400: 250 204 21;
+    --color-yellow-500: 234 179 8;
+    --color-yellow-600: 202 138 4;
+    --color-yellow-700: 161 98 7;
+    --color-yellow-800: 133 77 14;
+    --color-yellow-900: 113 63 18;
+    --color-yellow-950: 66 32 6;
+  }
+}
+
 body {
-  color: #ffffff;
-  background: #11001c;
+  background: rgb(var(--color-background));
+  color: rgb(var(--color-surface));
 }
 
 /** Fixes the misalignment when exporting builds to images */
