--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -159,23 +159,23 @@ body > div:last-child > span + img {
 }
 
 .tippy-box[data-theme~='r2tk'] {
-  background-color: rgb(22 78 99);
-  color: #fff;
+  background-color: rgb(var(--color-cyan-900));
+  color: rgb(var(--color-surface-solid));
   border-width: 1px;
-  border-color: rgb(34 211 238);
+  border-color: rgb(var(--color-cyan-400));
   font-size: 0.75rem/* 12px */;
   line-height: 1rem/* 16px */;
 }
 
 .tippy-box[data-theme~='r2tk'][data-placement^='top'] > .tippy-arrow::before {
-  border-top-color: rgb(22 78 99);
+  border-top-color: rgb(var(--color-cyan-900));
 }
 .tippy-box[data-theme~='r2tk'][data-placement^='bottom'] > .tippy-arrow::before {
-  border-bottom-color: rgb(22 78 99);
+  border-bottom-color: rgb(var(--color-cyan-900));
 }
 .tippy-box[data-theme~='r2tk'][data-placement^='left'] > .tippy-arrow::before {
-  border-left-color: rgb(22 78 99);
+  border-left-color: rgb(var(--color-cyan-900));
 }
 .tippy-box[data-theme~='r2tk'][data-placement^='right'] > .tippy-arrow::before {
-  border-right-color: rgb(22 78 99);
+  border-right-color: rgb(var(--color-cyan-900));
 }
