--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,54 @@ https://tailtools.app/palette-generator
 Broadly speaking this results in a darker pallete, which contrasts better in light mode
 */
 @layer base {
-  :root, .light {
+  
+  :root {
+    /* 
+    Variables (and default values are sourced from:
+    https://fkhadra.github.io/react-toastify/how-to-style/ 
+    
+    Original colors:
+        --toastify-color-info: #3498db;
+        --toastify-color-success: #07bc0c;
+        --toastify-color-warning: #f1c40f;
+        --toastify-color-error: #e74c3c;
+    */ 
+    --toastify-color-info: rgb(var(--color-cyan-500) / 1.0);
+    --toastify-color-success: #07bc0c;
+    --toastify-color-warning: rgb(var(--color-yellow-500) / 1.0);
+    --toastify-color-error: #e74c3c;
+    --toastify-color-transparent: rgba(255, 255, 255, 0.7);
+
+    --toastify-icon-color-info: var(--toastify-color-info);
+    --toastify-icon-color-success: var(--toastify-color-success);
+    --toastify-icon-color-warning: var(--toastify-color-warning);
+    --toastify-icon-color-error: var(--toastify-color-error);
+
+    /* 
+    We are always using the "dark" theme 
+    "colored" = solid colored background (e.g. success is white-on-green)
+    */
+    --toastify-color-dark: rgb(var(--color-background) / 1.0);
+    --toastify-text-color-dark: rgb(var(--color-surface-solid) / 1.0);
+
+    --toastify-toast-width: 320px;
+    --toastify-toast-background: #fff;
+    --toastify-toast-min-height: 64px;
+    --toastify-toast-max-height: 800px;
+    --toastify-font-family: sans-serif;
+    --toastify-z-index: 9999;
+
+    --toastify-color-progress-info: var(--toastify-color-info);
+    --toastify-color-progress-success: var(--toastify-color-success);
+    --toastify-color-progress-warning: var(--toastify-color-warning);
+    --toastify-color-progress-error: var(--toastify-color-error);
+
+    --toastify-color-progress-bgo: .2;
+  }
+  
+  .light {
+    --color-theme: "light";
+
     --color-background: 245 250 252;
     --color-background-solid: 255 255 255;
     --color-surface: 23 29 30;
@@ -81,6 +128,8 @@ Broadly speaking this results in a darker pallete, which contrasts better in lig
   }
 
   .dark {
+    --color-theme: "dark";
+
     --color-background: 17 0 28;
     --color-background-solid: 0 0 0;
     --color-surface: 245 250 252;
