--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,9 +24,9 @@ Broadly speaking this results in a darker pallete, which contrasts better in lig
         --toastify-color-warning: #f1c40f;
         --toastify-color-error: #e74c3c;
     */
-    --toastify-color-info: rgb(var(--color-cyan-500) / 1);
+    --toastify-color-info: rgb(var(--color-primary-500) / 1);
     --toastify-color-success: #07bc0c;
-    --toastify-color-warning: rgb(var(--color-yellow-500) / 1);
+    --toastify-color-warning: rgb(var(--color-accent1-500) / 1);
     --toastify-color-error: #e74c3c;
     --toastify-color-transparent: rgba(255, 255, 255, 0.7);
 
@@ -62,9 +62,7 @@ Broadly speaking this results in a darker pallete, which contrasts better in lig
     }
   }
 
-  .light {
-    --color-theme: 'light';
-
+  html[data-theme~='light'] {
     --color-background: 245 250 252;
     --color-background-solid: 255 255 255;
     --color-surface: 23 29 30;
@@ -94,46 +92,44 @@ Broadly speaking this results in a darker pallete, which contrasts better in lig
     --color-zinc-900: 244 244 245;
     --color-zinc-950: 250 250 250;
 
-    --color-cyan-50: 1 42 49;
-    --color-cyan-100: 2 64 74;
-    --color-cyan-200: 3 86 100;
-    --color-cyan-300: 4 107 125;
-    --color-cyan-400: 4 129 151;
-    --color-cyan-500: 5 151 176;
-    --color-cyan-600: 6 173 201;
-    --color-cyan-700: 56 197 221;
-    --color-cyan-800: 118 215 231;
-    --color-cyan-900: 180 233 242;
-    --color-cyan-950: 243 251 253;
+    --color-primary-50: 1 42 49;
+    --color-primary-100: 2 64 74;
+    --color-primary-200: 3 86 100;
+    --color-primary-300: 4 107 125;
+    --color-primary-400: 4 129 151;
+    --color-primary-500: 5 151 176;
+    --color-primary-600: 6 173 201;
+    --color-primary-700: 56 197 221;
+    --color-primary-800: 118 215 231;
+    --color-primary-900: 180 233 242;
+    --color-primary-950: 243 251 253;
 
-    --color-violet-50: 32 21 57;
-    --color-violet-100: 49 32 86;
-    --color-violet-200: 65 43 116;
-    --color-violet-300: 82 54 145;
-    --color-violet-400: 99 65 175;
-    --color-violet-500: 115 76 204;
-    --color-violet-600: 132 87 234;
-    --color-violet-700: 162 125 248;
-    --color-violet-800: 191 165 250;
-    --color-violet-900: 220 206 252;
-    --color-violet-950: 249 247 255;
+    --color-secondary-50: 32 21 57;
+    --color-secondary-100: 49 32 86;
+    --color-secondary-200: 65 43 116;
+    --color-secondary-300: 82 54 145;
+    --color-secondary-400: 99 65 175;
+    --color-secondary-500: 115 76 204;
+    --color-secondary-600: 132 87 234;
+    --color-secondary-700: 162 125 248;
+    --color-secondary-800: 191 165 250;
+    --color-secondary-900: 220 206 252;
+    --color-secondary-950: 249 247 255;
 
-    --color-yellow-50: 54 41 2;
-    --color-yellow-100: 82 63 3;
-    --color-yellow-200: 110 84 4;
-    --color-yellow-300: 138 106 5;
-    --color-yellow-400: 166 127 6;
-    --color-yellow-500: 194 149 7;
-    --color-yellow-600: 222 170 8;
-    --color-yellow-700: 238 194 57;
-    --color-yellow-800: 243 213 119;
-    --color-yellow-900: 249 232 181;
-    --color-yellow-950: 254 251 243;
+    --color-accent1-50: 54 41 2;
+    --color-accent1-100: 82 63 3;
+    --color-accent1-200: 110 84 4;
+    --color-accent1-300: 138 106 5;
+    --color-accent1-400: 166 127 6;
+    --color-accent1-500: 194 149 7;
+    --color-accent1-600: 222 170 8;
+    --color-accent1-700: 238 194 57;
+    --color-accent1-800: 243 213 119;
+    --color-accent1-900: 249 232 181;
+    --color-accent1-950: 254 251 243;
   }
 
-  .dark {
-    --color-theme: 'dark';
-
+  html[data-theme~='dark'] {
     --color-background: 17 0 28;
     --color-background-solid: 0 0 0;
     --color-surface: 245 250 252;
@@ -163,41 +159,216 @@ Broadly speaking this results in a darker pallete, which contrasts better in lig
     --color-zinc-900: 24 24 27;
     --color-zinc-950: 9 9 11;
 
-    --color-cyan-50: 236 254 255;
-    --color-cyan-100: 207 250 254;
-    --color-cyan-200: 165 243 252;
-    --color-cyan-300: 103 232 249;
-    --color-cyan-400: 34 211 238;
-    --color-cyan-500: 6 182 212;
-    --color-cyan-600: 8 145 178;
-    --color-cyan-700: 14 116 144;
-    --color-cyan-800: 21 94 117;
-    --color-cyan-900: 22 78 99;
-    --color-cyan-950: 8 51 68;
+    --color-primary-50: 236 254 255;
+    --color-primary-100: 207 250 254;
+    --color-primary-200: 165 243 252;
+    --color-primary-300: 103 232 249;
+    --color-primary-400: 34 211 238;
+    --color-primary-500: 6 182 212;
+    --color-primary-600: 8 145 178;
+    --color-primary-700: 14 116 144;
+    --color-primary-800: 21 94 117;
+    --color-primary-900: 22 78 99;
+    --color-primary-950: 8 51 68;
 
-    --color-violet-50: 245 243 255;
-    --color-violet-100: 237 233 254;
-    --color-violet-200: 221 214 254;
-    --color-violet-300: 196 181 253;
-    --color-violet-400: 167 139 250;
-    --color-violet-500: 139 92 246;
-    --color-violet-600: 124 58 237;
-    --color-violet-700: 109 40 217;
-    --color-violet-800: 91 33 182;
-    --color-violet-900: 76 29 149;
-    --color-violet-950: 46 16 101;
+    --color-secondary-50: 245 243 255;
+    --color-secondary-100: 237 233 254;
+    --color-secondary-200: 221 214 254;
+    --color-secondary-300: 196 181 253;
+    --color-secondary-400: 167 139 250;
+    --color-secondary-500: 139 92 246;
+    --color-secondary-600: 124 58 237;
+    --color-secondary-700: 109 40 217;
+    --color-secondary-800: 91 33 182;
+    --color-secondary-900: 76 29 149;
+    --color-secondary-950: 46 16 101;
 
-    --color-yellow-50: 254 252 232;
-    --color-yellow-100: 254 249 195;
-    --color-yellow-200: 254 240 138;
-    --color-yellow-300: 253 224 71;
-    --color-yellow-400: 250 204 21;
-    --color-yellow-500: 234 179 8;
-    --color-yellow-600: 202 138 4;
-    --color-yellow-700: 161 98 7;
-    --color-yellow-800: 133 77 14;
-    --color-yellow-900: 113 63 18;
-    --color-yellow-950: 66 32 6;
+    --color-accent1-50: 254 252 232;
+    --color-accent1-100: 254 249 195;
+    --color-accent1-200: 254 240 138;
+    --color-accent1-300: 253 224 71;
+    --color-accent1-400: 250 204 21;
+    --color-accent1-500: 234 179 8;
+    --color-accent1-600: 202 138 4;
+    --color-accent1-700: 161 98 7;
+    --color-accent1-800: 133 77 14;
+    --color-accent1-900: 113 63 18;
+    --color-accent1-950: 66 32 6;
+  }
+
+  
+  /* 
+  Accent tones are sampled from the Frost palette
+  https://www.nordtheme.com/docs/colors-and-palettes 
+  */
+
+  html[data-theme~='nord-snow'] {
+    --color-background: 236 239 244;
+    --color-surface: 46 52 64;
+
+    --color-primary-50: 31 44 48;
+    --color-primary-100: 48 67 73;
+    --color-primary-200: 64 90 98;
+    --color-primary-300: 80 113 123;
+    --color-primary-400: 97 136 148;
+    --color-primary-500: 113 159 173;
+    --color-primary-600: 129 182 198;
+    --color-primary-700: 160 205 217;
+    --color-primary-800: 190 220 229;
+    --color-primary-900: 219 236 241;
+    --color-primary-950: 249 252 253;
+
+    --color-secondary-50: 30 37 44;
+    --color-secondary-100: 45 56 68;
+    --color-secondary-200: 61 76 91;
+    --color-secondary-300: 76 95 114;
+    --color-secondary-400: 92 114 137;
+    --color-secondary-500: 107 134 160;
+    --color-secondary-600: 123 153 183;
+    --color-secondary-700: 154 180 205;
+    --color-secondary-800: 186 203 221;
+    --color-secondary-900: 217 227 236;
+    --color-secondary-950: 249 250 252;
+
+    --color-accent1-50: 33 43 43;
+    --color-accent1-100: 50 66 65;
+    --color-accent1-200: 67 88 88;
+    --color-accent1-300: 84 111 110;
+    --color-accent1-400: 102 133 133;
+    --color-accent1-500: 119 156 155;
+    --color-accent1-600: 136 179 178;
+    --color-accent1-700: 165 201 201;
+    --color-accent1-800: 193 218 218;
+    --color-accent1-900: 221 235 235;
+    --color-accent1-950: 249 252 252;
+  }
+
+  html[data-theme~='nord-polar'] {
+    --color-background: 46 52 64;
+    --color-surface: 216 222 233;
+
+    --color-primary-50: 249 252 253;
+    --color-primary-100: 219 236 241;
+    --color-primary-200: 190 220 229;
+    --color-primary-300: 160 205 217;
+    --color-primary-400: 129 182 198;
+    --color-primary-500: 113 159 173;
+    --color-primary-600: 97 136 148;
+    --color-primary-700: 80 113 123;
+    --color-primary-800: 64 90 98;
+    --color-primary-900: 48 67 73;
+    --color-primary-950: 31 44 48;
+
+    --color-secondary-50: 249 250 252;
+    --color-secondary-100: 217 227 236;
+    --color-secondary-200: 186 203 221;
+    --color-secondary-300: 154 180 205;
+    --color-secondary-400: 123 153 183;
+    --color-secondary-500: 107 134 160;
+    --color-secondary-600: 92 114 137;
+    --color-secondary-700: 76 95 114;
+    --color-secondary-800: 61 76 91;
+    --color-secondary-900: 45 56 68;
+    --color-secondary-950: 30 37 44;
+
+    --color-accent1-50: 249 252 252;
+    --color-accent1-100: 221 235 235;
+    --color-accent1-200: 193 218 218;
+    --color-accent1-300: 165 201 201;
+    --color-accent1-400: 136 179 178;
+    --color-accent1-500: 119 156 155;
+    --color-accent1-600: 102 133 133;
+    --color-accent1-700: 84 111 110;
+    --color-accent1-800: 67 88 88;
+    --color-accent1-900: 50 66 65;
+    --color-accent1-950: 33 43 43;
+  }
+
+  /* 
+  Accent tones are cyan / violet / yellow, in order to roughly mimic the default theme
+  https://en.wikipedia.org/wiki/Solarized#Colors  
+  */
+
+  html[data-theme~='solarized-light'] {
+    --color-background: 238 232 213;
+    --color-surface: 0 43 54;
+
+    --color-primary-50: 10 37 35;
+    --color-primary-100: 15 56 53;
+    --color-primary-200: 20 76 71;
+    --color-primary-300: 25 95 90;
+    --color-primary-400: 30 114 108;
+    --color-primary-500: 35 134 126;
+    --color-primary-600: 40 153 144;
+    --color-primary-700: 85 180 173;
+    --color-primary-800: 138 203 198;
+    --color-primary-900: 191 227 224;
+    --color-primary-950: 244 250 250;
+
+    --color-secondary-50: 25 26 45;
+    --color-secondary-100: 38 40 69;
+    --color-secondary-200: 51 53 92;
+    --color-secondary-300: 64 67 116;
+    --color-secondary-400: 77 80 139;
+    --color-secondary-500: 90 94 163;
+    --color-secondary-600: 103 107 186;
+    --color-secondary-700: 137 141 208;
+    --color-secondary-800: 174 177 223;
+    --color-secondary-900: 211 212 237;
+    --color-secondary-950: 248 248 252;
+
+    --color-accent1-50: 42 32 0;
+    --color-accent1-100: 63 48 0;
+    --color-accent1-200: 85 64 0;
+    --color-accent1-300: 107 81 0;
+    --color-accent1-400: 129 97 0;
+    --color-accent1-500: 150 114 0;
+    --color-accent1-600: 172 130 0;
+    --color-accent1-700: 196 161 51;
+    --color-accent1-800: 214 190 115;
+    --color-accent1-900: 233 220 179;
+    --color-accent1-950: 251 249 242;
+  }
+
+  html[data-theme~='solarized-dark'] {
+    --color-background: 7 54 66;
+    --color-surface: 253 246 227;
+
+    --color-primary-50: 244 250 250;
+    --color-primary-100: 191 227 224;
+    --color-primary-200: 138 203 198;
+    --color-primary-300: 85 180 173;
+    --color-primary-400: 40 153 144;
+    --color-primary-500: 35 134 126;
+    --color-primary-600: 30 114 108;
+    --color-primary-700: 25 95 90;
+    --color-primary-800: 20 76 71;
+    --color-primary-900: 15 56 53;
+    --color-primary-950: 10 37 35;
+
+    --color-secondary-50: 248 248 252;
+    --color-secondary-100: 211 212 237;
+    --color-secondary-200: 174 177 223;
+    --color-secondary-300: 137 141 208;
+    --color-secondary-400: 103 107 186;
+    --color-secondary-500: 90 94 163;
+    --color-secondary-600: 77 80 139;
+    --color-secondary-700: 64 67 116;
+    --color-secondary-800: 51 53 92;
+    --color-secondary-900: 38 40 69;
+    --color-secondary-950: 25 26 45;
+    
+    --color-accent1-50: 251 249 242;
+    --color-accent1-100: 233 220 179;
+    --color-accent1-200: 214 190 115;
+    --color-accent1-300: 196 161 51;
+    --color-accent1-400: 172 130 0;
+    --color-accent1-500: 150 114 0;
+    --color-accent1-600: 129 97 0;
+    --color-accent1-700: 107 81 0;
+    --color-accent1-800: 85 64 0;
+    --color-accent1-900: 63 48 0;
+    --color-accent1-950: 42 32 0;
   }
 }
 
@@ -215,21 +386,21 @@ body > div:last-child > span + img {
   background-color: rgb(var(--color-zinc-800));
   color: rgb(var(--color-surface-solid));
   border-width: 1px;
-  border-color: rgb(var(--color-yellow-500));
+  border-color: rgb(var(--color-accent1-500));
   font-size: 0.75rem /* 12px */;
   line-height: 1rem /* 16px */;
 }
 
 .tippy-box[data-theme~='r2tk'][data-placement^='top'] > .tippy-arrow::before {
-  border-top-color: rgb(var(--color-yellow-500));
+  border-top-color: rgb(var(--color-accent1-500));
 }
 .tippy-box[data-theme~='r2tk'][data-placement^='bottom']
   > .tippy-arrow::before {
-  border-bottom-color: rgb(var(--color-yellow-500));
+  border-bottom-color: rgb(var(--color-accent1-500));
 }
 .tippy-box[data-theme~='r2tk'][data-placement^='left'] > .tippy-arrow::before {
-  border-left-color: rgb(var(--color-yellow-500));
+  border-left-color: rgb(var(--color-accent1-500));
 }
 .tippy-box[data-theme~='r2tk'][data-placement^='right'] > .tippy-arrow::before {
-  border-right-color: rgb(var(--color-yellow-500));
+  border-right-color: rgb(var(--color-accent1-500));
 }
