--- a/packages/ui/src/styles.css
+++ b/packages/ui/src/styles.css
@@ -63,6 +63,7 @@ Broadly speaking this results in a darker pallete, which contrasts better in lig
   }
 
   html[data-theme~='light'] {
+    color-scheme: light;
     --color-background: 245 250 252;
     --color-background-solid: 255 255 255;
     --color-surface: 23 29 30;
@@ -130,6 +131,7 @@ Broadly speaking this results in a darker pallete, which contrasts better in lig
   }
 
   html[data-theme~='dark'] {
+    color-scheme: dark;
     --color-background: 17 0 28;
     --color-background-solid: 0 0 0;
     --color-surface: 245 250 252;
@@ -202,6 +204,7 @@ Broadly speaking this results in a darker pallete, which contrasts better in lig
   */
 
   html[data-theme~='nord-snow'] {
+    color-scheme: light;
     --color-background: 236 239 244;
     --color-surface: 46 52 64;
 
@@ -243,6 +246,7 @@ Broadly speaking this results in a darker pallete, which contrasts better in lig
   }
 
   html[data-theme~='nord-polar'] {
+    color-scheme: dark;
     --color-background: 46 52 64;
     --color-surface: 216 222 233;
 
@@ -289,6 +293,7 @@ Broadly speaking this results in a darker pallete, which contrasts better in lig
   */
 
   html[data-theme~='solarized-light'] {
+    color-scheme: light;
     --color-background: 238 232 213;
     --color-surface: 0 43 54;
 
@@ -330,6 +335,7 @@ Broadly speaking this results in a darker pallete, which contrasts better in lig
   }
 
   html[data-theme~='solarized-dark'] {
+    color-scheme: dark;
     --color-background: 7 54 66;
     --color-surface: 253 246 227;
 
